kubernetes/02-services/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    role: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      role: hello
      tier: web
  template:
    metadata:
      labels:
        role: hello
        tier: web
    spec:
      containers:
      - name: hello
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
