kubernetes/02-services/02-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: myapp
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080 
  selector:
    app: myapp
  sessionAffinity: None
  type: ClusterIP
