kubernetes/02-services/02-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-lb
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http 
  selector:
    role: hello
