kubernetes/02-services/03-route-tls.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello
  name: hello-tls
  namespace: workshop
spec:
  host: hello-tls-workshop.apps.ocp4.labs.semperti.local
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: hello
    weight: 100
  wildcardPolicy: None
