kubernetes/02-services/03-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello
  name: hello
  namespace: workshop
spec:
  host: hello-workshop.apps.ocp4.labs.semperti.local
  port:
    targetPort: http
  to:
    kind: Service
    name: hello
    weight: 100
  wildcardPolicy: None
